--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,1 +1,10 @@
-<!-- Стандартный логин и кнопка Sign up для перехода на страницу регистрации
+<!-- Стандартный логин и кнопка Sign up для перехода на страницу регистрации-->
+
+<html>
+<head>
+
+</head>
+<body>
+
+</body>
+</html>
