--- a/src/main/resources/templates/my-account.html
+++ b/src/main/resources/templates/my-account.html
@@ -1,2 +1,10 @@
 <!-- Для обычного пользователя на этой странице отображается таблица со всеми его записями и кнока возле каждой записи
-чтобы отменить ее
+чтобы отменить ее-->
+<html>
+<head>
+
+</head>
+<body>
+
+</body>
+</html>
