--- a/src/main/resources/templates/search-result.html
+++ b/src/main/resources/templates/search-result.html
@@ -1,1 +1,9 @@
-<!-- Отображение таблицы расписание для введенного доктора
+<!-- Отображение таблицы расписание для введенного доктора-->
+<html>
+<head>
+
+</head>
+<body>
+
+</body>
+</html>
