--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,13 @@
 <!--Главная страница, содержит в header'е кнопку Log In и кнопку My Account (появляется только если пользователь
 авторизован)
 <-- Содержит также поле для ввода ФИО доктора и кнопку поиск, после чего перебрасывает на страницу с результатом
-<-- Если пользователь админ, то также должна быть кнопка Admin Panel, где можно добавить/удалить/редактировать часы приема
+<-- Если пользователь админ, то также должна быть кнопка Admin Panel, где можно добавить/удалить/редактировать часы приема -->
+
+<html>
+<head>
+
+</head>
+<body>
+
+</body>
+</html>
