--- a/src/main/resources/templates/my-account.html
+++ b/src/main/resources/templates/my-account.html
@@ -1,6 +1,7 @@
 <!-- Для обычного пользователя на этой странице отображается таблица со всеми его записями и кнока возле каждой записи
 чтобы отменить ее-->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 
 </head>
