Created a registration, have to implement roles

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,9 @@
     <div sec:authorize="hasRole('USER')">
         <a href="/account">To Account</a>
     </div>
+    <div>
+        <a href="/logout">Log out</a>
+    </div>
 
 
     </div>
