--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,6 +5,12 @@
 
 </head>
 <body>
-
+    <h2>Registration</h2>
+    <form th:action="@{/register}" th:object="${user}" method="post">
+        <p>Name: <input type="text" th:field="*{username}" /></p>
+        <p>Password: <input type="text" th:field="*{password}" /></p>
+        <input type="submit" value="Submit"/>
+        <input type="reset" value="Reset"/>
+    </form>
 </body>
 </html>
