--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,3 @@
-<!--Главная страница, содержит в header'е кнопку Log In и кнопку My Account (появляется только если пользователь
-авторизован)
-<-- Содержит также поле для ввода ФИО доктора и кнопку поиск, после чего перебрасывает на страницу с результатом
-<-- Если пользователь админ, то также должна быть кнопка Admin Panel, где можно добавить/удалить/редактировать часы приема -->
-
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
@@ -12,6 +7,9 @@
 <!-- IF people IS not ANONYMOUS -->
 <div th:if="${#authentication.getName() != 'anonymousUser'}">
     <div>Welcome, <span th:text="${#authentication.getName()}"></span></div>
+    <div>
+        <a href="/logout" >Log Out</a>
+    </div>
     <div sec:authorize="hasRole('ADMIN')">
         <a href="/admin">To Admin Panel</a>
     </div>
@@ -27,13 +25,20 @@
 </div>
 <!-- ELSE -->
 <div th:unless="${#authentication.getName() != 'anonymousUser'}">
-    <a href="/login">Log in</a>
+    <a href="/login">Log In</a>
 </div>
-
-<h3>Enter Last Name</h3>
-<form action="#" th:action="@{/search}" th:object="${query}" method="post">
-    <p>Last name: <input type="text" th:field="*{query}" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
-</form>
+<!--<h3>Enter doctor's name, surname and patronymic (if exists)</h3>-->
+<!--<form action="#" th:action="@{/search}" th:object="${doctor}" method="get">-->
+<!--    <label for="firstName">First name</label>-->
+<!--    <input type="text" th:field="*{firstName}" id="firstName" placeholder="First Name">-->
+<!--    <br/>-->
+<!--    <label for="lastName">Last name</label>-->
+<!--    <input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name">-->
+<!--    <br/>-->
+<!--    <label for="patronymic">Patronymic</label>-->
+<!--    <input type="text" th:field="*{patronymic}" id="patronymic" placeholder="Patronymic">-->
+<!--    <br/>-->
+<!--    <input type="submit" value="Check schedule">-->
+<!--</form>-->
 </body>
 </html>
