--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,9 +6,10 @@
 </head>
 <body>
     <h2>Registration</h2>
+    <div th:text="${error}"></div>
     <form th:action="@{/register}" th:object="${user}" method="post">
         <p>Name: <input type="text" th:field="*{username}" /></p>
-        <p>Password: <input type="text" th:field="*{password}" /></p>
+        <p>Password: <input type="password" th:field="*{password}" /></p>
         <input type="submit" value="Submit"/>
         <input type="reset" value="Reset"/>
     </form>
