--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,18 +24,10 @@
     <div th:unless="${#authentication.getName() != 'anonymousUser'}">
         <a href="/register">Register</a>
     </div>
-<!--<h3>Enter doctor's name, surname and patronymic (if exists)</h3>-->
-<!--<form action="#" th:action="@{/search}" th:object="${doctor}" method="get">-->
-<!--    <label for="firstName">First name</label>-->
-<!--    <input type="text" th:field="*{firstName}" id="firstName" placeholder="First Name">-->
-<!--    <br/>-->
-<!--    <label for="lastName">Last name</label>-->
-<!--    <input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name">-->
-<!--    <br/>-->
-<!--    <label for="patronymic">Patronymic</label>-->
-<!--    <input type="text" th:field="*{patronymic}" id="patronymic" placeholder="Patronymic">-->
-<!--    <br/>-->
-<!--    <input type="submit" value="Check schedule">-->
-<!--</form>-->
+<h3>Enter doctor's name, surname and patronymic (if exists)</h3>
+    <form action="#" th:action="@{/search}" th:object="${query}" method="post">
+        <p>Last name: <input type="text" th:field="*{query}" /></p>
+        <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    </form>
 </body>
 </html>
