--- a/src/main/resources/templates/search-result.html
+++ b/src/main/resources/templates/search-result.html
@@ -11,10 +11,11 @@
 <p th:if="${!doctors.isEmpty()}">
     <div th:each="doctor: ${doctors}">
         ---
+    <p th:text="${doctor.id}">asd</p>
     <p th:text="${doctor.firstName}">asd</p>
     <p th:text="${doctor.lastName}">asd</p>
     <p th:text="${doctor.speciality}">asd</p>
-    <a>Appointment table</a>
+    <a th:href="@{'/timetable/' + ${doctor.id}}">Appointment table</a>
     </div>
 </p>
 <p th:unless="${!doctors.isEmpty()}">Empty</p>
