table for admin panel

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -5,13 +5,30 @@
 </head>
 <body>
 <div th:if="${#authentication.getName() != 'anonymousUser'}">
-    <div th:each="doctor: ${doctors}">
-        ---
-        <p th:text="${doctor.id}">asd</p>
-        <p th:text="${doctor.firstName}">asd</p>
-        <p th:text="${doctor.lastName}">asd</p>
-        <p th:text="${doctor.speciality}">asd</p>
-        <a th:href="@{'/admin/doctor/timetable/edit/' + ${doctor.id}}">Edit</a>
+    <div th:switch="${!doctors.isEmpty()}">
+        <h2 th:case="false">We couldn't find doctor with given surname :(</h2>
+        <div th:case="true">
+            <table>
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>First name</th>
+                    <th>Last name</th>
+                    <th>Speciality</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="doctor : ${doctors}">
+                    <td th:text="${doctor.id}"></td>
+                    <td th:text="${doctor.firstName}"></td>
+                    <td th:text="${doctor.lastName}"></td>
+                    <td th:text="${doctor.speciality}"></td>
+                    <td> <a th:href="@{'/admin/doctor/timetable/edit/' + ${doctor.id}}">Edit schedule</a></td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
     </div>
 </div>
 <div th:unless="${#authentication.getName() != 'anonymousUser'}">
